--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
 remote_theme: pages-themes/time-machine@v0.2.0
+highlighter: rouge
+markdown: kramdown
+kramdown:
+  input: GFM
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
